--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vee-validate/rules": "^4.8.4",
     "axios": "^1.4.0",
     "pinia": "^2.0.35",
+    "uuid": "^9.0.0",
     "vee-validate": "^4.9.3",
-    "@vee-validate/rules": "^4.8.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
@@ -23,6 +24,7 @@
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.0",
     "@types/node": "^18.16.3",
+    "@types/uuid": "^9.0.2",
     "@vitejs/plugin-vue": "^4.2.1",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
