--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "~5.0.4",
     "vite": "^4.3.4",
+    "vite-plugin-dynamic-import": "^1.5.0",
     "vue-tsc": "^1.6.4"
   }
 }
