--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
+    "sass": "^1.66.1",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.0.4",
     "vite": "^4.3.4",
