--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vee-validate/rules": "^4.8.4",
     "@vueform/multiselect": "^2.6.2",
     "axios": "^1.4.0",
+    "maska": "^2.1.10",
     "pinia": "^2.0.35",
     "uuid": "^9.0.0",
     "vee-validate": "^4.11.1",
