--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vee-validate/rules": "^4.8.4",
     "@vueform/multiselect": "^2.6.2",
     "axios": "^1.4.0",
+    "lodash.debounce": "^4.0.8",
     "maska": "^2.1.10",
     "pinia": "^2.0.35",
     "uuid": "^9.0.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
     "@tsconfig/node18": "^2.0.0",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/node": "^18.16.3",
     "@types/uuid": "^9.0.2",
     "@vitejs/plugin-vue": "^4.2.1",
