--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "lodash.debounce": "^4.0.8",
     "maska": "^2.1.10",
+    "moment": "^2.29.4",
     "pinia": "^2.0.35",
     "uuid": "^9.0.0",
     "vee-validate": "^4.11.1",
