--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,23 @@
+//{
+//  "files": [],
+//  "references": [
+//    {
+//      "path": "./tsconfig.node.json"
+//    },
+//    {
+//      "path": "./tsconfig.app.json"
+//    }
+//  ]
+//}
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
+  "extends": "@vue/tsconfig/tsconfig.json",
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
+  "exclude": ["src/**/__tests__/*"],
+  "compilerOptions": {
+    "composite": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
     },
-    {
-      "path": "./tsconfig.app.json"
-    }
-  ]
-}
+    "allowSyntheticDefaultImports": true
+  }}
