--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,5 @@ jobs:
             cd var/www/allprojects/recipes_frontend
             git pull origin master
             git status
+            npm install
             npm run build-only
