--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,4 @@ jobs:
             git pull origin master
             git status
             npm install
-            npm run build-only
+            npm run build-prod
